objects/EBS_Order_Sync_Framework__c.object
<CustomObject>
    <fields>
        <fullName>EBS_Order_Generated__c</fullName>
        <formula>Opportunity__r.Migrated_to_EBS__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Order Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_Unit_Name__c</fullName>
        <formula>Opportunity__r.Operating_Unit_ID__c</formula>
        <label>Operating Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Links to the Closed Won Opportunity which is to be sent over to EBS</description>
        <label>Opportunity (Related Order)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>EBS Order Sync Framework</relationshipLabel>
        <relationshipName>EBS_Order_Sync_Framework</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Sync_Status__c</fullName>
        <label>Order Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                    <default>true</default>
                    <label>Processing</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account_EBS_Id__c</fullName>
        <formula>Opportunity__r.Account.EBS_Account_ID__c</formula>
        <label>Related Account EBS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_SF_Id__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <label>Related Account SF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Bill_To_Address_EBS_Id__c</fullName>
        <formula>Opportunity__r.Bill_To_Address__r.EBS_Site_Use_ID__c</formula>
        <label>Related Bill To Address EBS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Bill_To_Address_SF_Id__c</fullName>
        <formula>Opportunity__r.Bill_To_Address__c</formula>
        <label>Related Bill To Address SF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Bill_To_Contact_EBS_Id__c</fullName>
        <formula>Opportunity__r.Bill_To_Contact__r.EBS_Contact_ID__c</formula>
        <label>Related Bill To Contact EBS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Bill_To_Contact_SF_Id__c</fullName>
        <formula>Opportunity__r.Bill_To_Contact__c</formula>
        <label>Related Bill To Contact SF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Ship_To_Address_EBS_Id__c</fullName>
        <formula>Opportunity__r.Ship_To_Address__r.EBS_Site_Use_ID__c</formula>
        <label>Related Ship To Address EBS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Ship_To_Address_SF_Id__c</fullName>
        <formula>Opportunity__r.Ship_To_Address__c</formula>
        <label>Related Ship To Address SF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Ship_To_Contact_EBS_Id__c</fullName>
        <formula>Opportunity__r.Ship_To_Contact__r.EBS_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Ship To Contact EBS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Ship_To_Contact_SF_Id__c</fullName>
        <formula>Opportunity__r.Ship_To_Contact__c</formula>
        <label>Related Ship To Contact SF Id</label>
        <type>Text</type>
    </fields>
    <description>This object would be used to control the Opportunity (Order) Sync process with EBS by ensuring that all dependencies like Account (new customer), associated  Addresses, Contacts and Contact Addresses have a valid EBS Id and if not, sync them with EBS first before pushing the Order. It does this by generating and queuing multiple Integration Queue records.</description>
    <label>EBS Order Sync Framework</label>
    <nameField>
        <displayFormat>OS-{00000000}</displayFormat>
        <label>Order Sync Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBS Order Sync Framework</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Related_Account_EBS_Id__c</columns>
        <columns>Related_Account_SF_Id__c</columns>
        <columns>Related_Bill_To_Address_EBS_Id__c</columns>
        <columns>Related_Bill_To_Address_SF_Id__c</columns>
        <columns>Related_Bill_To_Contact_EBS_Id__c</columns>
        <columns>Related_Bill_To_Contact_SF_Id__c</columns>
        <columns>Related_Ship_To_Address_EBS_Id__c</columns>
        <columns>Related_Ship_To_Address_SF_Id__c</columns>
        <columns>Related_Ship_To_Contact_EBS_Id__c</columns>
        <columns>Related_Ship_To_Contact_SF_Id__c</columns>
        <columns>EBS_Order_Generated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>